--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "axios": "^1.6.7",
@@ -19,6 +20,9 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-dotenv": "^3.4.11",
+    "react-native-inset-shadow": "^1.0.3",
+    "react-native-neomorph-shadows": "^1.1.2",
+    "react-native-neumorphic": "^0.0.0-development",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
