--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-native": "0.73.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.8.2",
