--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "axios": "^1.6.7",
     "expo": "~50.0.11",
+    "expo-constants": "^15.4.5",
     "expo-font": "^11.10.3",
+    "expo-jwt": "^1.7.0",
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.73.4",
