--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "axios": "^1.6.7",
+    "base-64": "^1.0.0",
     "expo": "~50.0.11",
     "expo-constants": "^15.4.5",
     "expo-font": "^11.10.3",
+    "expo-image-picker": "^14.7.1",
     "expo-jwt": "^1.7.0",
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "^0.24.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
@@ -32,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/base-64": "^1.0.2",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
